--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "13.3.4",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-toastify": "^9.1.2",
