--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
+    "country-state-city": "^3.1.4",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "firebase": "^9.21.0",
