--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-next": "13.3.4",
     "firebase": "^9.21.0",
     "next": "13.3.4",
+    "nextjs-progressbar": "^0.0.16",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-data-table-component": "^7.5.3",
